--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
-    "node": "^17.7.2"
+    "node": "^17.7.2",
+    "redis": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
