Dockerized the project

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-host= 'localhost'
-user= 'your_mysql_username'
-password= 'your_mysql_password'
-port= 3306
+MYSQLDB_USER='root'
+MYSQLDB_ROOT_PASSWORD='pwd'
+MYSQLDB_DATABASE='db'
+MYSQLDB_LOCAL_PORT=
+MYSQLDB_DOCKER_PORT=
+NODE_LOCAL_PORT=
+NODE_DOCKER_PORT=\
 
-secret="your_secret_key"
+secret=""
